// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Snapshot tests it matches the snapshot 1`] = `
.c0 {
  border: 0;
  font-size: 12px;
  background-color: #EEEEEE;
  color: #5F5F5F;
  border-radius: 6px;
  padding: 8px 12px;
  outline: none;
  box-shadow: inset 1px 2px 8px rgb(0,0,0,0.05);
  -webkit-transition: background ease 0.3s;
  transition: background ease 0.3s;
  width: 300px;
}

.c0::-webkit-input-placeholder {
  color: #bdbdbd;
}

.c0::-moz-placeholder {
  color: #bdbdbd;
}

.c0:-ms-input-placeholder {
  color: #bdbdbd;
}

.c0::placeholder {
  color: #bdbdbd;
}

.c0:hover {
  box-shadow: inset 2px 3px 8px rgb(0,0,0,0.1);
  background-color: #F3F3F3;
}

.c0:active {
  background-color: #E7E7E7;
}

<input
  class="c0"
  maxlength="30"
  value="1"
/>
`;

exports[`Input Snapshot tests it matches the snapshot for only digits and max length 1`] = `
.c0 {
  border: 0;
  font-size: 12px;
  background-color: #EEEEEE;
  color: #5F5F5F;
  border-radius: 6px;
  padding: 8px 12px;
  outline: none;
  box-shadow: inset 1px 2px 8px rgb(0,0,0,0.05);
  -webkit-transition: background ease 0.3s;
  transition: background ease 0.3s;
  width: 10px;
  text-align: right;
}

.c0::-webkit-input-placeholder {
  color: #bdbdbd;
}

.c0::-moz-placeholder {
  color: #bdbdbd;
}

.c0:-ms-input-placeholder {
  color: #bdbdbd;
}

.c0::placeholder {
  color: #bdbdbd;
}

.c0:hover {
  box-shadow: inset 2px 3px 8px rgb(0,0,0,0.1);
  background-color: #F3F3F3;
}

.c0:active {
  background-color: #E7E7E7;
}

<input
  class="c0"
  maxlength="1"
  value="1"
/>
`;
